# manifest-manager

./: .gitignore  LICENSE  README.md  manifest-manager.py  manifest-manager.tcss  manifest.json  manifest.py  modrinth_api.py  pyproject.toml  requirements.txt  test.py  update.bat  update.ps1
manifest_manager/: manifest-manager.py  manifest.py  mrpack.py
manifest_manager/widgets/: __init__.py  manager_menu.py  manifest_box.py  manifest_file_box.py
widgets/: custom_directory_tree.py  manager_menu.py  manifest_box.py  manifest_file_box.py  manifest_menu.py
