[tool.poetry]
name = "manifest-manager"
version = "0.1.0"
description = ""
authors = ["Sean Del Castillo <seanbdcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
textual = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
