[tool.poetry]
name = "manifest-manager"
version = "0.1.0"
description = "Modrinth Manifest File Manager"
authors = ["Sean Del Castillo <seanbdcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
textual = "^0.59.0"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240602"
pyinstaller = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
